@@ -1,21 +1,20 @@
 #!/usr/bin/make -f
-%:
-	dh $@
 
-
-CFLAGS = -Wall -g -fstack-protector -fPIE
-LDFLAGS = -Wl,--as-needed -Wl,-z,relro -Wl,-z,now -pie
+export DEB_BUILD_MAINT_OPTIONS=hardening=+pie
+export DEB_CFLAGS_MAINT_APPEND=-Wall
+export DEB_LDFLAGS_MAINT_APPEND=-Wl,--as-needed -Wl,-z,now
 
 # Disable optimisations if noopt found in $DEB_BUILD_OPTIONS
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-	LDFLAGS += -Wl,-O0
+	DEB_LDFLAGS_MAINT_APPEND += -Wl,-O0
 else
-	CFLAGS += -Os
-	LDFLAGS += -Wl,-O1
+	DEB_CFLAGS_MAINT_APPEND += -Os
+	DEB_LDFLAGS_MAINT_APPEND += -Wl,-O1
 endif
 
+%:
+	dh $@
+
 override_dh_auto_configure:
-	dh_auto_configure -- CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)" \
-		--exec-prefix=
+	dh_auto_configure -- --exec-prefix=
 	make -C po update-po
